@@ -1,5 +1,3 @@
-pkgdatadir = $(prefix)/share/pixmaps/@PACKAGE@
-
 if TARGET_WIN32
 if HAS_XPM2WICO
 ghfaxviewer-icon.ico: ghfaxviewer-icon.xpm
@@ -9,18 +7,20 @@ all: ghfaxviewer-icon.ico
 endif
 endif
 
-pkgdata_DATA = printer.xpm \
-	       left90.xpm right90.xpm reverse.xpm \
-               right_arrow.xpm left_arrow.xpm \
-               zoom_in.xpm zoom_out.xpm info.xpm \
-	       ghfaxviewer-logo.xpm ghfaxviewer-icon.xpm
+pixmapdir = $(prefix)/share/pixmaps/ghfaxviewer
+
+pixmap_DATA = printer.xpm \
+	      left90.xpm right90.xpm reverse.xpm \
+              right_arrow.xpm left_arrow.xpm \
+              zoom_in.xpm zoom_out.xpm info.xpm \
+	      ghfaxviewer-logo.xpm ghfaxviewer-icon.xpm
 
 EXTRA_DIST = hand-closed-data.xbm hand-closed-mask.xbm \
 		 hand-open-data.xbm hand-open-mask.xbm \
 		 stock-zoom-out.xpm stock-zoom-in.xpm \
 		 stock-zoom-out-menu.xpm stock-zoom-in-menu.xpm \
-		 $(pkgdata_DATA)
+		 $(pixmap_DATA)
 
 uninstall-local:
-		test -d $(pkgdatadir) && \
-			rmdir --ignore-fail-on-non-empty $(pkgdatadir)
+	test -d $(pixmapdir) && \
+	  rmdir --ignore-fail-on-non-empty $(pixmapdir)
